Fix .main spacing

--- a/public/styles/mobile_styles.css
+++ b/public/styles/mobile_styles.css
@@ -5,7 +5,7 @@ html {
 .header {
     padding: 10px 20px;
     height: 56px;
-    background-image: linear-gradient(to right, var(--dark-blue) 50%, rgba(0,0,0,0.6) 50%);
+    background-image: linear-gradient(to right, var(--dark-blue) 50%, rgba(0, 0, 0, 0.6) 50%);
     background-size: 200% 100%;
     background-position: right;
 }
@@ -36,7 +36,7 @@ html {
 
 .header-games-overlay.active {
     padding-bottom: 100%;
-    left:0;
+    left: 0;
 }
 
 .hamburger.opened {
@@ -204,17 +204,24 @@ header.searching>.left>*:not(:nth-child(1)) {
 
 .main {
     margin: 40px auto 100px;
-    place-items: center;
+    /* place-items: center; */
     width: 100%;
     max-width: 800px;
 }
 
 .main-games-cards-carousel {
     gap: unset!important;
+    place-self: center;
 }
 
 .main-games-cards-carousel>img {
     display: unset;
+}
+
+.highlight {
+    display: flex;
+    gap: 15px;
+    margin: 0 20px 40px;
 }
 
 .footer .left {
